<resources>
    <string name="app_name">SecondActivity</string>
    <string name="hums_page_headline_text">Help Your Friends</string>
    <string name="profile_user_name_string">Atara Haimi</string>
    <string name="friends_page_headline_text">Friends</string>
    <string name="shazamzams_text">Shazamzams</string>
    <string name="friends_shazamzams_headline_text">Shazamzams</string>
    <string name="open_in_youtube_text">Open in YouTube</string>
    <string name="hum_name_text">No answer</string>
    <string name="email_hint">Email...</string>
    <string name="password_hint">Password...</string>
    <string name="user_name_hint">User Name...</string>
    <string name="num_of_listeners_text">5 Listeners</string>
    <string name="hum_row_length">0:37</string>
    <string name="xp_points_text">Xp points</string>
    <string name="friends_text">Friends</string>
    <string name="my_profile_text">My Profile</string>
    <string name="hum_answered_text">Hum answered!</string>
    <string name="story_text">Story</string>
    <string name="story_profile_name">Tuval190</string>
    <string name="general_fail_message">Oops... something went wrong</string>
    <string name="End_time_record_str">End time record</string>
    <string name="upload_answer_success_msg">Thanks for your answer!</string>
    <string name="upload_answer_fail_msg">Something went wrong, please try again</string>
    <string name="user_not_logged_in_msg">User not logged in!!</string>
    <string name="cancel_record_msg">Canceled recording</string>
    <string name="upload_success_msg">Successfully uploaded!</string>
    <string name="no_answer_text">No Answer</string>
    <string name="google_sign_success_msg">Google Sign In Successfully</string>
    <string name="google_sign_fail_msg">Google Sign In Unsuccessful</string>
    <string name="empty_login_fields_msg">Fields are empty.</string>
    <string name="sign_in_fail_msg">Sign In Problem</string>
    <string name="friend_user_name_hint">Enter friend\'s full name here</string>
    <string name="add_friend_text">add friend</string>
    <string name="log_out_text">Log Out</string>
    <string name="record_length_text">0:03</string>
    <string name="please_confirm_your_hum_text">Please confirm your hum</string>
    <string name="full_name_hint">Full Name...</string>
    <string name="fake_name_text">Tuval Ben Ami</string>
    <string name="changing_xp_text">168 xp</string>
    <string name="answer_hint">Please answer here...</string>
    <string name="time_record_text">00:00</string>
    <string name="answer_text">Answer</string>
    <string name="friend_added_successfully_text">Friend added successfully!!</string>
</resources>
