<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendProfileActivity"
    android:background="@drawable/gradient_background"
    android:layoutDirection="ltr" >

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_marginLeft="@dimen/global_left_margin"
        android:layout_marginTop="@dimen/global_top_margin_type2"
        android:background="@color/transparent"
        android:onClick="launchFriendsPageActivity"
        android:scaleType="centerCrop"
        android:src="@drawable/left_arrow_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/friend_profile_name_textView"
        android:textAppearance="@style/headline_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/friend_name_top_margin"
        android:text="@string/profile_user_name_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.alexzh.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="@dimen/friend_profile_pic_diameter"
        android:layout_height="@dimen/friend_profile_pic_diameter"
        android:src="@drawable/sample_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_profile_name_textView"
        app:view_borderColor="@color/gunmetal"
        app:view_borderWidth="@dimen/profile_pic_border_width"
        app:view_shadowColor="@color/gunmetal" />

    <ImageView
        android:id="@+id/xp_star_icon"
        android:layout_width="@dimen/friend_profile_star_dimen"
        android:layout_height="@dimen/friend_profile_star_dimen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        android:src="@drawable/star_image"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/friend_profile_xp_points_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xp_points_text"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/xp_star_icon" />

    <TextView
        android:id="@+id/shazamzams_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/shazamzams_textView_bottom_margin"
        android:gravity="center"
        android:text="@string/shazamzams_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/speaker_imageView"
        android:layout_width="@android:dimen/notification_large_icon_width"
        android:layout_height="@android:dimen/notification_large_icon_height"
        android:background="@color/transparent"
        android:onClick="launchFriendShazamzamsActivity"
        android:scaleType="fitCenter"
        android:src="@drawable/speaker_circled_icon"
        app:layout_constraintBottom_toTopOf="@+id/shazamzams_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
