<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/story_row_layout"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/answer_editText"
        android:layout_width="@dimen/answer_editText_width"
        android:layout_height="@dimen/editText_height"
        android:hint="@string/answer_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_space" />

    <ImageButton
        android:id="@+id/confirm_answer_imageButton"
        android:layout_width="@dimen/confirm_answer_width"
        android:layout_height="@dimen/confirm_answer_height"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/answer_editText"
        app:srcCompat="@drawable/v_image_button" />

    <Space
        android:id="@+id/story_space"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/story_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.alexzh.circleimageview.CircleImageView
            android:id="@+id/friend_profile_picture_circleImageView"
            android:layout_width="@dimen/friend_profile_picture_width"
            android:layout_height="@dimen/friend_profile_picture_height"
            android:layout_marginStart="@dimen/friend_profile_picture_start_margin"
            android:layout_marginTop="@dimen/friend_profile_picture_top_margin"
            android:clickable="false"
            android:src="@drawable/sample_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:view_backgroundColor="@color/transparent"
            app:view_borderColor="@color/gunmetal"
            app:view_borderWidth="@dimen/profile_pic_border_width" />

        <TextView
            android:id="@+id/friend_row_full_name_textView"
            android:layout_width="@dimen/friend_row_full_name_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/friend_profile_picture_bottom_margin"
            android:gravity="center"
            android:text="@string/story_profile_name"
            android:textAppearance="@style/friend_row_name_textStyle"
            android:textColor="@color/white"
            android:textSize="@dimen/friend_row_full_name_textSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/friend_profile_picture_circleImageView"
            app:layout_constraintStart_toStartOf="@+id/friend_profile_picture_circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/friend_profile_picture_circleImageView" />

        <ImageButton
            android:id="@+id/play_story_hum_imageButton"
            android:layout_width="@dimen/play_story_hum_width"
            android:layout_height="@dimen/play_story_hum_height"
            android:layout_marginStart="@dimen/global_left_margin"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/friend_row_full_name_textView"
            app:layout_constraintStart_toEndOf="@+id/friend_profile_picture_circleImageView"
            app:layout_constraintTop_toTopOf="@+id/friend_profile_picture_circleImageView"
            app:srcCompat="@drawable/play_button_icon" />

        <TextView
            android:id="@+id/hum_length_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/hum_length_start_margin"
            android:text="@string/time_record_text"
            android:textAppearance="@style/friend_row_name_textStyle"
            android:textColor="@color/white"
            android:textSize="@dimen/hum_length_textSize"
            app:layout_constraintBottom_toBottomOf="@+id/play_story_hum_imageButton"
            app:layout_constraintStart_toEndOf="@+id/play_story_hum_imageButton"
            app:layout_constraintTop_toTopOf="@+id/play_story_hum_imageButton" />

        <ImageButton
            android:id="@+id/answer_imageButton"
            android:layout_width="@dimen/answer_width"
            android:layout_height="@dimen/answer_height"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/answer_start_margin"
            android:layout_marginTop="@dimen/answer_top_margin"
            android:layout_marginEnd="@dimen/answer_end_margin"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hum_length_textView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/answer_image" />

        <TextView
            android:id="@+id/answer_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answer_imageButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/answer_text"
            android:textAppearance="@style/friend_xp_textStyle"
            android:textColor="@color/white"
            android:textSize="@dimen/answer_textSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/answer_imageButton"
            app:layout_constraintStart_toStartOf="@+id/answer_imageButton"
            app:layout_constraintTop_toBottomOf="@+id/answer_imageButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
