<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:layoutDirection="ltr"
    tools:context=".SignUpActivity">

    <ImageButton
        android:id="@+id/previos_imageButton"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_marginStart="@dimen/global_left_margin"
        android:background="@android:color/transparent"
        android:onClick="launchLoginActivity"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/left_horizontal_line_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/previous_button" />

    <ImageView
        android:id="@+id/login_headline"
        android:layout_width="@dimen/page_headline_width"
        android:layout_height="@dimen/page_headline_height"
        android:layout_marginTop="@dimen/headline_top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/narrow_singup_headline_image" />

    <View
        android:id="@+id/right_horizontal_line_sign_up"
        android:layout_width="0dp"
        android:layout_height="@dimen/line_height"
        android:background="@color/gunmetal"
        app:layout_constraintBottom_toBottomOf="@+id/login_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_headline"
        app:layout_constraintTop_toTopOf="@+id/login_headline" />

    <View
        android:id="@+id/left_horizontal_line_sign_up"
        android:layout_width="0dp"
        android:layout_height="@dimen/line_height"
        android:background="@color/gunmetal"
        app:layout_constraintBottom_toBottomOf="@+id/login_headline"
        app:layout_constraintEnd_toStartOf="@+id/login_headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_headline" />


    <EditText
        android:id="@+id/user_nameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_side_margin"
        android:layout_marginTop="@dimen/global_top_margin"
        android:ems="10"
        android:hint="@string/user_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_headline" />

    <EditText
        android:id="@+id/full_nameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_side_margin"
        android:layout_marginTop="@dimen/global_top_margin"
        android:ems="10"
        android:hint="Full Name..."
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editText" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_side_margin"
        android:layout_marginTop="@dimen/global_top_margin"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_nameField" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/global_side_margin"
        android:layout_marginTop="@dimen/global_top_margin"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_editText" />

    <ImageButton
        android:id="@+id/registerBtn"
        android:layout_width="@dimen/letsgo_button_width"
        android:layout_height="@dimen/letsgo_button_height"
        android:layout_marginBottom="@dimen/letsgo_bottom_margin_type2"
        android:background="@android:color/transparent"
        android:onClick="launchLoginActivity"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editText"
        app:layout_constraintVertical_bias="0.621"
        app:srcCompat="@drawable/lets_go_button" />

    <ImageView
        android:id="@+id/decoration_background"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/decotation_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/decorations_button" />

</androidx.constraintlayout.widget.ConstraintLayout>