<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".HomePageActivity"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/xpPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_profile_text"
        app:layout_constraintEnd_toEndOf="@+id/profile_link_imageButton"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="@+id/profile_link_imageButton"
        app:layout_constraintTop_toBottomOf="@+id/profile_link_imageButton" />

    <TextView
        android:id="@+id/story_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/story_text"
        app:layout_constraintEnd_toEndOf="@+id/story_imageButton"
        app:layout_constraintStart_toStartOf="@+id/story_imageButton"
        app:layout_constraintTop_toBottomOf="@+id/story_imageButton" />

    <ImageButton
        android:id="@+id/mic_imageButton"
        android:layout_width="@dimen/mic_width"
        android:layout_height="@dimen/mic_height"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mic_image_2" />

    <ImageButton
        android:id="@+id/profile_link_imageButton"
        android:layout_width="@dimen/upper_icon_width"
        android:layout_height="@dimen/upper_icon_height"
        android:layout_marginTop="@dimen/global_top_margin_type2"
        android:layout_marginEnd="@dimen/side_margin"
        android:background="@android:color/transparent"
        android:onClick="launchMyProfilePage"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_link_image_2" />

    <Button
        android:id="@+id/logOutBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/global_bottom_margin"
        android:background="@drawable/custom_button"
        android:onClick="LogOut"
        android:scaleType="centerCrop"
        android:text="@string/log_out_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/story_imageButton"
        android:layout_width="@dimen/upper_icon_width"
        android:layout_height="@dimen/upper_icon_height"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="@dimen/global_top_margin_type2"
        android:background="@android:color/transparent"
        android:onClick="onClickOpenStory"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/keren_yaar2" />

    <ProgressBar
        android:id="@+id/record_animation"
        android:layout_width="@dimen/record_animation_width"
        android:layout_height="@dimen/record_animation_height"
        style="?android:attr/progressBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:progress="70"
        android:indeterminateDrawable="@drawable/circle_progress_bar"/>

    <ProgressBar
        android:id="@+id/record_animation2"
        android:layout_width="@dimen/record_animation2_width"
        android:layout_height="@dimen/record_animation2_height"
        style="?android:attr/progressBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:progress="70"
        android:indeterminateDrawable="@drawable/circle_progress_bar2"/>

    <com.jgabrielfreitas.core.BlurImageView
        android:id="@+id/blur_mic_image"
        android:layout_width="@dimen/mic_width"
        android:layout_height="@dimen/mic_height"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/mic_image_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jgabrielfreitas.core.BlurImageView
        android:id="@+id/blur_profile_link_image"
        android:layout_width="@dimen/upper_icon_width"
        android:layout_height="@dimen/upper_icon_height"
        android:layout_marginTop="@dimen/global_top_margin_type2"
        android:layout_marginEnd="@dimen/side_margin"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_link_image_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stroy_recycleView"
        android:layout_width="@dimen/recyclerview_home_page_width"
        android:layout_height="@dimen/recyclerview_home_page_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/story_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>